substituted local files by url

--- a/notebooks/chapter01_sec03.ipynb
+++ b/notebooks/chapter01_sec03.ipynb
@@ -53,7 +53,7 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "daten = pd.read_csv('autoscout24_xxs.csv', index_col=0)\n",
+    "daten = pd.read_csv('https://nextcloud.frankfurt-university.de/s/xDoGYwbmcrD9sDc/download/autoscout24_xxs.csv', index_col=0)\n",
     "daten.info()"
    ]
   },
