--- a/notebooks/chapter02_sec01.ipynb
+++ b/notebooks/chapter02_sec01.ipynb
@@ -193,11 +193,11 @@
     "# Erstellen Sie eine Karte Frankfurt UAS als Ausgangspunkt und Zoomfaktor\n",
     "karte_geojson = folium.Map(location=[50.13085378545699, 8.691700550887166], zoom_start=13)\n",
     "\n",
-    "geojson_datei = \"geojson_frankfurt_uas.json\"\n",
+    "geojson_datei = \"https://nextcloud.frankfurt-university.de/s/jrLsb3taFcpiri2/download/geojson_frankfurt_uas.json\"\n",
     "\n",
     "# Erstellen Sie eine Choroplethenkarte und fügen Sie sie zur Karte hinzu\n",
     "folium.Choropleth(\n",
-    "    geo_data=\"geojson_frankfurt_uas.json\",\n",
+    "    geo_data=geojson_datei,\n",
     "    name='choropleth'\n",
     ").add_to(karte_geojson)\n",
     "\n",
