--- a/notebooks/chapter02_sec02.ipynb
+++ b/notebooks/chapter02_sec02.ipynb
@@ -53,7 +53,7 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "data = pd.read_csv('autoscout24_DE_2020.csv')\n",
+    "data = pd.read_csv('https://nextcloud.frankfurt-university.de/s/jrLsb3taFcpiri2/download/autoscout24_DE_2020.csv')\n",
     "data.info()"
    ]
   },
